<resources>
    <string name="app_name">REPTOOL</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_report">DAILY REPORT</string>
    <string name="weeklyReport">WEEKLY REPORT</string>
    <string name="allReports">ALL REPORTS</string>
    <string name="job">JOB</string>
    <string name="manager">MANAGER</string>
    <string name="settings">SETTINGS</string>
    <string name="add_new_manager">Add new Manager</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="email">email</string>
    <string name="save">SAVE</string>
    <string name="add_new_job">Add new job</string>
    <string name="job_number">job number</string>
    <string name="jobAddress">address</string>
    <string name="jobDescription">desc.</string>
    <string name="find_job">FIND JOB</string>
    <string name="jobManager">PM</string>
    <string name="client_name">client name</string>
    <string name="street">street</string>
    <string name="postcode">postcode</string>
    <string name="showAll">SHOW ALL</string>
    <string name="find_job_by">FIND JOB BY</string>
    <string name="find">FIND</string>
    <string name="cancel">CANCEL</string>
    <string name="firebasepath_job">Job</string>
    <string name="firebasepath_job_service">Service</string>
    <string name="firebasepath_job_maintenance">Maintenance</string>
    <string name="firebasepath_job_callout">Call_Out</string>
    <string name="extra_jobNumber">jobNumber</string>
    <string name="firebasepath_job_jobNumber">jobNumber</string>
    <string name="firebasepath_job_description">shortDescription</string>
    <string name="firebasepath_job_address">address</string>
    <string name="firebasepath_job_address_name">name</string>
    <string name="firebasepath_job_address_postcode">postCode</string>
    <string name="firebasepath_job_address_street">street</string>
    <string name="firebasepath_job_projectManager">projectManager</string>
    <string name="firebasepath_manager_name">name</string>
    <string name="firebasepath_manager_surname">surname</string>
    <string name="firebasepath_manager_emailAddress">emailAddress</string>
    <string name="firebasepath_manager">Manager</string>
    <string name="empty" />
    <string name="job_exists">Job already exists</string>
    <string name="report_exists">Report already exists</string>
    <string name="empty_fields">Fields empty</string>
    <string name="already_exists">Already exists</string>
    <string name="change">Change</string>
    <string name="delete">DELETE</string>
    <string name="do_you_really_Want_to_delete">Do you really want to delete</string>
    <string name="start">Start</string>
    <string name="day">DAY</string>
    <string name="startTime">Start</string>
    <string name="endTime">End</string>
    <string name="job_info">job info</string>
    <string name="accidents">accidents</string>
    <string name="firebasepath_weekly_reports">weeklyReports</string>
    <string name="firebasepath_all_reports">allReports</string>
    <string name="send">send</string>
    <string name="WORK">WORK</string>
    <string name="DAY_OFF">DAY OFF</string>
    <string name="TRAINING">TRAINING</string>
    <string name="BANK_HOLIDAY">BANK HOLIDAY</string>
    <string name="sending">sending</string>
    <string name="deleting">deleting</string>
    <string name="are_you_sure">are you sure?</string>
    <string name="are_you_sure_you_want_delete">Are you sure you want delete: </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="daily_report_saved">DAILY REPORT SAVED</string>
    <string name="choose_date">choose date</string>
    <string name="training_short">TR</string>
    <string name="day_off_short">DO</string>
    <string name="bank_holiday_short">BH</string>
    <string name="choose">CHOOSE</string>
    <string name="add_mark">+</string>
    <string name="inst">INST</string>
    <string name="maint">MAINT</string>
    <string name="serv">SERV</string>
    <string name="call">CALL</string>
    <string name="finished_question_mark">finished?</string>
    <string name="working_question_mark">WORKING?</string>
    <string name="edit_job">EDIT JOB</string>
    <string name="delete_job">DELETE JOB</string>
    <string name="job_finished">JOB FINISHED</string>
    <string name="edit_manager">EDIT MANAGER</string>
    <string name="delete_manager">DELETE MANAGER</string>
    <string name="delete_daily_report">DELETE DAILY REPORT</string>
    <string name="none">NONE</string>


    <string-array name="spinnerDailyReport">
        <item>WORK</item>
        <item>DAY OFF</item>
        <item>TRAINING</item>
        <item>BANK HOLIDAY</item>
    </string-array>

</resources>
