<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constraintLayoutLayoutJob"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/marginHalf">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/jobNumberAndManagerLinearLayoutLayoutJob"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jobNumberLayoutJob"
        android:text="@string/job_number"
        android:layout_marginEnd="@dimen/marginHalf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jobManagerLayoutJob"
        android:text="@string/jobManager"/>
  </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:id="@+id/jobNameLayoutJob"
      android:text="@string/name"
      app:layout_constraintTop_toBottomOf="@id/jobNumberAndManagerLinearLayoutLayoutJob"
      app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jobPostcodeAndAddressLinearLayoutJob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobNameLayoutJob"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/jobPostcodeLayoutJob"
            android:text="@string/postcode"
            android:layout_marginEnd="@dimen/marginHalf"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/jobAddressLayoutJob"
            android:text="@string/jobAddress"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jobDescriptionLayoutJob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobPostcodeAndAddressLinearLayoutJob"
        android:text="@string/jobDescription"/>

    <ImageView
        android:id="@+id/imageEditLayoutJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageDeleteLayoutJob"
        android:layout_margin="8dp"
        android:contentDescription="@string/edit_job" />

    <ImageView
        android:id="@+id/imageDeleteLayoutJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:contentDescription="@string/delete_job" />

  <ImageView
      android:id="@+id/imageFinishedJob"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_job_finished"
      app:layout_constraintEnd_toStartOf="@id/imageEditLayoutJob"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_margin="8dp"
      android:contentDescription="@string/job_finished" />



</androidx.constraintlayout.widget.ConstraintLayout>