<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/daily_report"
        android:id="@+id/buttonDailyReport"
        android:onClick="dailyReportOnClick"
        style="@style/ButtonMy"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/weeklyReport"
        android:id="@+id/buttonWeeklyReport"
        android:onClick="weeklyReportOnClick"
        style="@style/ButtonMy"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/allReports"
        android:id="@+id/buttonAllReports"
        android:onClick="allReportsActivityClick"
        style="@style/ButtonMy"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/job"
        android:id="@+id/buttonJob"
        android:onClick="onJobClick"
        style="@style/ButtonMy"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/manager"
        android:id="@+id/buttonManager"
        android:onClick="onManagerClick"
        style="@style/ButtonMy"/>



</LinearLayout>