<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".JobsToChoose">

    <RadioGroup
        android:id="@+id/RadioGroupJobToChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <RadioButton
            android:id="@+id/instRadioButtonJobToChoose"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/inst"
            android:onClick="onRadioButtonJobToChooseClicked"/>
        <RadioButton
            android:id="@+id/maintRadioButtonJobToChoose"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/maint"
            android:onClick="onRadioButtonJobToChooseClicked"/>
        <RadioButton
            android:id="@+id/servRadioButtonJobToChoose"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/serv"
            android:onClick="onRadioButtonJobToChooseClicked"/>
        <RadioButton
            android:id="@+id/callRadioButtonJobToChoose"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:onClick="onRadioButtonJobToChooseClicked"/>

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewJobToChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/RadioGroupJobToChoose"
        app:layout_constraintLeft_toLeftOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>