<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewManagers"
            android:layout_width="match_parent"
            android:layout_height="200dp"
/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_manager"
                android:gravity="center"
                android:textSize="@dimen/bigText"
                android:layout_margin="@dimen/margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:layout_margin="@dimen/margin"
                    android:textSize="@dimen/smallText"/>
                <EditText
                    android:id="@+id/managerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp"
                    android:layout_weight="3"
                    android:layout_margin="@dimen/margin"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp"
                    android:layout_weight="1"
                    android:text="@string/surname"
                    android:layout_margin="@dimen/margin"
                    android:textSize="@dimen/smallText"/>
                <EditText
                    android:id="@+id/managerSurname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp"
                    android:layout_weight="3"
                    android:layout_margin="@dimen/margin"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:layout_margin="@dimen/margin"
                    android:textSize="@dimen/smallText"/>
                <EditText
                    android:id="@+id/managerEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Suspicious0dp"
                    android:layout_weight="3"
                    android:layout_margin="@dimen/margin"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/save"
                android:onClick="saveManager"/>


        </LinearLayout>


    </LinearLayout>



</ScrollView>